crates/aranya-policy-compiler/tests/data/type_errors/struct_composition_option_struct_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: option[struct Bar]
   |
13 |         ...maybe_bar
   |            ^^^^^^^^^ expected `struct T` but found `option[struct Bar]`
